ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2013/03/28 - jgonzale - Simulator | GUI | prv2dim - 5.0.0
	FEATURES:	Added intra-node contention simulation. This contention
				is modelled in the same way as the intra-node contention,
				using # of buses, # of input links and # of output links.
				It requires adding these three parameters to the configuration
				file ('node information' has changed), the GUI and also
				the DimemasUpdateCFG, to translate old CFG files no the
				newer version.

				Due to the introduction of these new feature and the
				modificacion of the configuration file, the major version
				has been increased.

	BUGFIX:		'prv2dim' did not translate the MPI_Rsend primitives. Now
				they are translated as regular MPI_Send.
				

2013/03/07 - jgonzale - Simulator
	CHANGES:	New way to compute the collective FANs, taking into
				account the number of partners at different stages:
					- Number of tasks per node
					- Number of nodes per machine
					- Number of machines in WAN
	
	CHANGES:	LIN model now applies P = num_partners-1 (as the total
				number of messages interchanged)
	
	BUGFIX:		Solved a bug when loading the collectives fine tuning
				using an external file. It loaded the values mixing the
				internal network and the WAN.

2013/02/26 - jgonzale - prv2dim - 4.4.1pre
	BUGFIX:		Solved a bug when reading blank lines of a trace with
				CRLF line terminators

	FEATURES:	Added a warning when wrong records (TaskIds out of bounds
				found in the trace

2013/02/21 - jgonzale - Simulator
	BUGFIX:		Add missing include of 'list.h' to 'simulator.c' file that
				caused a segmentation fault in linux-ia64 machines.

2013/02/21 - jgonzale - Simulator
	BUGFIX:		Add missing information about collective communications ids