@@ -10,6 +10,9 @@ Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)
 
 	CHANGES:  	explanation of codification changes
 
+2013/03/28 - jgonzale - Simulator
+	BUGFIX:		Correction in scape characters of 'DimemasUpdateCFG'
+
 2013/03/28 - jgonzale - Simulator | GUI | prv2dim - 5.0.0
 	FEATURES:	Added intra-node contention simulation. This contention
 				is modelled in the same way as the intra-node contention,
